--- a/index.html
+++ b/index.html
@@ -2,127 +2,91 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>名鉄運行案内シミュレーター</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>toye不定期 | YouTube公式サイト</title>
+
+  <!-- SEO -->
+  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイトです。不定期に企画・解説・バラエティ動画を配信中。Discord Botのソースコード提供や最新情報も掲載中。">
+  <meta name="robots" content="noindex, noarchive"> <!-- ★追加：Googleに表示させない -->
+
+  <!-- OGP -->
+  <meta property="og:title" content="toye不定期 | 公式サイト">
+  <meta property="og:description" content="YouTubeチャンネル『toye不定期』の最新情報を掲載。Discord Botサポートや企画リストはこちら。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://toye.f5.si/">
+  <meta property="og:image" content="https://toye.f5.si/og-image.png">
+
   <style>
-    body {
-      margin: 0;
-      background: black;
-      color: orange;
-      font-family: 'MS Gothic', monospace;
-      overflow: hidden;
-    }
-    .container {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 5vh 0;
-      box-sizing: border-box;
-    }
-    .main {
-      font-size: 8vw;
-      font-weight: bold;
-      text-shadow: 0 0 20px #ff8000, 0 0 40px #ff4000;
-    }
-    .scroll-area {
-      font-size: 4vw;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 100%;
-      border-top: 2px solid orange;
-      border-bottom: 2px solid orange;
-      padding: 20px 0;
-    }
-    .scroll-text {
-      display: inline-block;
-      padding-left: 100%;
-      animation: scroll 25s linear infinite;
-    }
-    @keyframes scroll {
-      from { transform: translateX(0); }
-      to   { transform: translateX(-100%); }
-    }
+    body { font-family:"Noto Sans JP", sans-serif; margin:0; background:#f8f9fa; color:#333; }
+    header { background:#2c3e50; color:#fff; padding:25px; text-align:center; }
+    header h1 { margin:0; font-size:2em; }
+    header p { margin:8px 0 0; font-size:1em; }
+    main { max-width:900px; margin:40px auto; padding:30px; background:#fff; border-radius:12px; box-shadow:0 4px 14px rgba(0,0,0,0.1); }
+    h2 { color:#c0392b; border-left:6px solid #c0392b; padding-left:10px; margin-bottom:15px; }
+    p { line-height:1.8; margin-bottom:20px; }
+    .btn { display:inline-block; padding:12px 22px; background:#e74c3c; color:#fff; border-radius:6px; text-decoration:none; }
+    .btn:hover { background:#c0392b; }
+    .video-frame { margin:20px 0; text-align:center; }
+    iframe { width:100%; max-width:560px; height:315px; border:none; border-radius:10px; }
+    footer { text-align:center; margin:30px 0; font-size:0.9em; color:#666; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="main" id="mainText">準急 吉良吉田 行き</div>
-    <div class="scroll-area">
-      <span class="scroll-text" id="scrollText">停車駅: 新安城・知立・神宮前・名古屋</span>
-    </div>
-  </div>
+  <header>
+    <h1>🎥 toye不定期</h1>
+    <p>YouTube公式サイト</p>
+  </header>
 
-  <script>
-    const stations = ["新安城","知立","東岡崎","国府","豊橋","鳴海","神宮前","金山","名鉄名古屋","岩倉","犬山","岐阜","吉良吉田"];
-    const types = ["普通","急行","準急","特急","快速特急"];
-    const destinations = ["豊橋","岐阜","吉良吉田","犬山","名鉄名古屋"];
+  <main>
+    <section>
+      <h2>📢 toye不定期とは？</h2>
+      <p>
+        「toye不定期」は、YouTubeで活動している公式チャンネルです。<br>
+        不定期更新ながら、バラエティ企画・解説動画・実験的なコンテンツなど幅広いジャンルをお届けしています。<br>
+        この公式サイトでは、YouTubeチャンネルの最新情報や企画採用リスト、さらに視聴者の皆さまへの公式発表を順次掲載していきます。<br>
+        現在は準備中の部分も多いですが、今後は「ブレインロット企画」や「フォートナイト関連情報」などのコンテンツも追加予定です。<br>
+        ぜひブックマークしてチェックしてください！
+      </p>
+    </section>
 
-    function randomPick(arr) {
-      return arr[Math.floor(Math.random() * arr.length)];
-    }
+    <section>
+      <h2>▶ 最新動画</h2>
+      <div class="video-frame">
+        <!-- 任意の動画IDに置き換え -->
+        <iframe src="https://www.youtube.com/embed/buPIEcgNSqo" allowfullscreen></iframe>
+      </div>
+      <p style="text-align:center;">
+        <a href="https://www.youtube.com/@toye%E4%B8%8D%E5%AE%9A%E6%9C%9F" target="_blank" class="btn">チャンネルをチェック</a>
+      </p>
+    </section>
 
-    function speak(text, lang="ja-JP") {
-      let utter = new SpeechSynthesisUtterance(text);
-      utter.lang = lang;
-      utter.rate = 0.95;
-      utter.pitch = 0.9;
-      speechSynthesis.speak(utter);
-    }
+    <section>
+      <h2>🤖 Discord Bot ソースコード提供について</h2>
+      <p>
+        「toye不定期」では、Discord Bot のソースコードについてわからない方へ向けて、<br>
+        YouTubeチャンネル登録者限定で解説・コード提供を行っています。<br><br>
+        興味のある方は、ぜひチャンネル登録のうえ、<b>フリーチャット</b>にてお気軽にコメントしてください。<br>
+        コメントを確認次第、サポートや詳細情報をお届けします。<br><br>
+        初心者の方も大歓迎ですので、お気軽にご参加ください！
+      </p>
+    </section>
 
-    function startTrain() {
-      let type = randomPick(types);
-      let dest = randomPick(destinations);
+    <section>
+      <h2>📝 企画採用リスト</h2>
+      <p>現在はまだ採用された企画はありません。決定次第こちらで公開いたします。</p>
+    </section>
 
-      document.getElementById("mainText").innerText = `${type} ${dest} 行き`;
+    <section>
+      <h2>📬 お問い合わせ</h2>
+      <p>
+        公式情報に関するお問い合わせは、YouTubeチャンネルのコメント欄または公式フォームにてお願いします。<br>
+        将来的には、このサイトからも直接お問い合わせいただけるフォームを設置予定です。
+      </p>
+    </section>
+  </main>
 
-      let route = [];
-      for (let i=0; i<8; i++) route.push(randomPick(stations));
-      document.getElementById("scrollText").innerText = "停車駅: " + route.join("・");
-
-      // 出発アナウンス
-      speak(`まもなく、${type} ${dest}行きが発車します。`);
-
-      const interval = 20000;
-
-      route.forEach((station, i) => {
-        setTimeout(() => {
-          let messages = [];
-
-          // 日本語アナウンス
-          messages.push(`次は、${station}です。`);
-          messages.push(`${station}駅で、特急の通過待ちを行います。`);
-          messages.push(`${station}駅で、地下鉄${randomPick(["東山線","鶴舞線","名城線"])}にお乗り換えです。`);
-
-          // 英語 30%
-          if (Math.random() < 0.3) {
-            messages.push(`Next stop is ${station}. Please change here for the subway.`);
-            speak(`Next stop is ${station}. Please change here for the subway.`, "en-US");
-          }
-
-          // 韓国語 10%
-          if (Math.random() < 0.1) {
-            messages.push(`${station}역입니다. 지하철로 환승하실 수 있습니다.`);
-            speak(`${station}역입니다. 지하철로 환승하실 수 있습니다.`, "ko-KR");
-          }
-
-          // スクロール表示更新（多言語も流す）
-          document.getElementById("scrollText").innerText = messages.join(" ／ ");
-
-          // 日本語必須読み上げ
-          speak(`次は、${station}です。`);
-          speak(`${station}駅で、特急の通過待ちを行います。`);
-          speak(`${station}駅で、地下鉄${randomPick(["東山線","鶴舞線","名城線"])}にお乗り換えです。`);
-        }, (i+1)*interval);
-      });
-
-      setTimeout(() => {
-        speak(`まもなく、終点 ${dest}です。ご利用ありがとうございました。`);
-      }, (route.length+1)*interval);
-    }
-
-    window.onload = startTrain;
-  </script>
+  <footer>
+    <p>&copy; 2025 toye不定期 | 公式サイト</p>
+  </footer>
 </body>
 </html>
