--- a/index.html
+++ b/index.html
@@ -1,149 +1,70 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>名鉄運行案内シミュレーター</title>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      color: orange;
-      font-family: 'MS Gothic', monospace;
-      overflow: hidden;
-    }
-    .container {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 5vh 0;
-      box-sizing: border-box;
-    }
-    .main {
-      font-size: 8vw;
-      font-weight: bold;
-      text-shadow: 0 0 20px #ff8000, 0 0 40px #ff4000;
-      opacity: 0;
-      transform: translateY(-30px);
-      transition: all 1s ease;
-    }
-    .main.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    .scroll-area {
-      font-size: 4vw;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 100%;
-      border-top: 2px solid orange;
-      border-bottom: 2px solid orange;
-      padding: 20px 0;
-      box-sizing: border-box;
-    }
-    .scroll-text {
-      display: inline-block;
-      padding-left: 100%;
-      animation: scroll 25s linear infinite;
-    }
-    @keyframes scroll {
-      from { transform: translateX(0); }
-      to   { transform: translateX(-100%); }
-    }
-  </style>
+<meta charset="UTF-8">
+<title>LED行先表示</title>
+<style>
+  body {
+    margin: 0;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  canvas {
+    background: black;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <div class="main" id="mainText">準急 吉良吉田 行き</div>
-    <div class="scroll-area">
-      <span class="scroll-text" id="scrollText">停車駅: 新安城・知立・神宮前・名古屋</span>
-    </div>
-  </div>
+<canvas id="led" width="900" height="250"></canvas>
 
-  <script>
-    const stations = ["新安城","知立","東岡崎","国府","豊橋","鳴海","神宮前","金山","名鉄名古屋","岩倉","犬山","岐阜","吉良吉田"];
-    const types = ["普通","急行","準急","特急","快速特急"];
-    const destinations = ["豊橋","岐阜","吉良吉田","犬山","名鉄名古屋"];
+<script>
+const canvas = document.getElementById("led");
+const ctx = canvas.getContext("2d");
 
-    function randomPick(arr) {
-      return arr[Math.floor(Math.random() * arr.length)];
+// ドットマトリクスの設定
+const dotSize = 8;   // ドット直径
+const gap = 2;       // ドット間隔
+const cols = 100;    // 横のドット数
+const rows = 30;     // 縦のドット数
+
+// テキストを描画する関数
+function drawLEDText(text) {
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle = "black";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  ctx.font = "bold 60px 'MS Gothic'";
+  ctx.fillStyle = "white";
+  ctx.textAlign = "center";
+  ctx.textBaseline = "middle";
+  ctx.fillText(text, canvas.width/2, canvas.height/2);
+
+  // ドット化処理
+  let imageData = ctx.getImageData(0,0,canvas.width,canvas.height).data;
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  for (let y=0; y<rows; y++) {
+    for (let x=0; x<cols; x++) {
+      let px = x * (dotSize+gap);
+      let py = y * (dotSize+gap);
+
+      // ピクセルのサンプル位置
+      let idx = ((py*canvas.width)+px)*4;
+      let bright = imageData[idx]; // 白文字の明るさを取得
+
+      ctx.beginPath();
+      ctx.arc(px, py, dotSize/2, 0, Math.PI*2);
+      ctx.fillStyle = bright > 128 ? "white" : "#222"; // 点灯 or 消灯
+      ctx.fill();
     }
+  }
+}
 
-    function speak(text, lang="ja-JP") {
-      let utter = new SpeechSynthesisUtterance(text);
-      utter.lang = lang;
-      utter.rate = 0.95;
-      utter.pitch = 0.9;
-      speechSynthesis.speak(utter);
-    }
-
-    function animateMainText(newText) {
-      const el = document.getElementById("mainText");
-      el.classList.remove("show");
-      setTimeout(() => {
-        el.innerText = newText;
-        el.classList.add("show");
-      }, 200);
-    }
-
-    function startTrain() {
-      let type = randomPick(types);
-      let dest = randomPick(destinations);
-
-      animateMainText(`${type} ${dest} 行き`);
-
-      let route = [];
-      for (let i=0; i<8; i++) route.push(randomPick(stations));
-      document.getElementById("scrollText").innerText = "停車駅: " + route.join("・");
-
-      // 出発アナウンス
-      speak(`まもなく、${type} ${dest}行きが発車します。`);
-
-      const interval = 20000;
-
-      route.forEach((station, i) => {
-        setTimeout(() => {
-          let messages = [];
-
-          // 日本語アナウンス
-          messages.push(`次は、${station}です。`);
-          messages.push(`${station}駅で、特急の通過待ちを行います。`);
-          messages.push(`${station}駅で、地下鉄${randomPick(["東山線","鶴舞線","名城線"])}にお乗り換えです。`);
-
-          // 英語 30%
-          if (Math.random() < 0.3) {
-            messages.push(`Next stop is ${station}. Please change here for the subway.`);
-            speak(`Next stop is ${station}. Please change here for the subway.`, "en-US");
-          }
-
-          // 韓国語 10%
-          if (Math.random() < 0.1) {
-            messages.push(`${station}역입니다. 지하철로 환승하실 수 있습니다.`);
-            speak(`${station}역입니다. 지하철로 환승하실 수 있습니다.`, "ko-KR");
-          }
-
-          // スクロール表示更新
-          document.getElementById("scrollText").innerText = messages.join(" ／ ");
-
-          // メイン表示アニメーション（行先を動的に入れ替える）
-          animateMainText(`${type} ${dest} 行き`);
-
-          // 日本語必須読み上げ
-          speak(`次は、${station}です。`);
-          speak(`${station}駅で、特急の通過待ちを行います。`);
-          speak(`${station}駅で、地下鉄${randomPick(["東山線","鶴舞線","名城線"])}にお乗り換えです。`);
-        }, (i+1)*interval);
-      });
-
-      setTimeout(() => {
-        animateMainText(`終点 ${dest}`);
-        speak(`まもなく、終点 ${dest}です。ご利用ありがとうございました。`);
-      }, (route.length+1)*interval);
-    }
-
-    window.onload = startTrain;
-  </script>
+// 行先テスト
+drawLEDText("普通 大須");
+</script>
 </body>
 </html>
